@@ -3,8 +3,10 @@ package ma.nttsquad.nttecomcore.service.impl;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import ma.nttsquad.nttecomcore.dto.CategoryByLangDto;
+import ma.nttsquad.nttecomcore.dto.UserDto;
 import ma.nttsquad.nttecomcore.exception.NttNotFoundException;
 import ma.nttsquad.nttecomcore.mapper.CategoryByLangMapper;
+import ma.nttsquad.nttecomcore.mapper.UserMapper;
 import ma.nttsquad.nttecomcore.model.repository.CategoryByLangRepository;
 import ma.nttsquad.nttecomcore.service.CategoryByLangSrv;
 import org.springframework.stereotype.Service;
@@ -21,10 +23,14 @@ public class CategoryByLangSrvImpl implements CategoryByLangSrv {
 
     @Override
     public List<CategoryByLangDto> getAllCategoriesByLang() {
-        return categoryByLangRepository.findAll()
+        List<CategoryByLangDto> allCategoryByLangDTO = categoryByLangRepository.findAll()
                 .stream()
                 .map(CategoryByLangMapper.INSTANCE::entityToDto)
-                .collect(Collectors.toList());
+                .toList();
+        if(allCategoryByLangDTO == null || allCategoryByLangDTO.isEmpty()){
+            throw new NttNotFoundException("There's no categories in database");
+        }
+        return allCategoryByLangDTO;
     }
 
     @Override
@@ -37,25 +43,22 @@ public class CategoryByLangSrvImpl implements CategoryByLangSrv {
     }
 
     @Override
-    public void saveCategoryByLang(CategoryByLangDto categoryByLangDto) {
-        log.trace("start save category: {}",categoryByLangDto);
-        categoryByLangRepository.save(CategoryByLangMapper.INSTANCE.dtoToEntity(categoryByLangDto));
-        log.trace("end save category");
+    public CategoryByLangDto saveCategoryByLang(CategoryByLangDto categoryByLangDto) {
+        log.trace("save category: {}",categoryByLangDto);
+        return CategoryByLangMapper.INSTANCE.entityToDto(categoryByLangRepository.save(CategoryByLangMapper.INSTANCE.dtoToEntity(categoryByLangDto)));
     }
 
     @Override
-    public void updateCategoryByLang(Long categoryByLang_id, CategoryByLangDto categoryByLangDto) {
-        log.trace("start update category: {} {}",categoryByLang_id, categoryByLangDto);
+    public CategoryByLangDto updateCategoryByLang(Long categoryByLang_id, CategoryByLangDto categoryByLangDto) {
+        log.trace("update category: {} {}",categoryByLang_id, categoryByLangDto);
         CategoryByLangDto category = getCategoryById(categoryByLang_id);
         categoryByLangDto.setId(category.getId());
-        categoryByLangRepository.save(CategoryByLangMapper.INSTANCE.dtoToEntity(categoryByLangDto));
-        log.trace("end update category: {}",categoryByLang_id);
+        return CategoryByLangMapper.INSTANCE.entityToDto(categoryByLangRepository.save(CategoryByLangMapper.INSTANCE.dtoToEntity(categoryByLangDto)));
     }
 
     @Override
     public void deleteCategoryByLang(Long categoryByLang_id) {
-        log.trace("start delete category: {}",categoryByLang_id);
+        log.trace("delete category: {}",categoryByLang_id);
         categoryByLangRepository.deleteById(categoryByLang_id);
-        log.trace("end delete category: {}",categoryByLang_id);
     }
 }
